--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
             <img src="../../assets/images/about.jpg" alt="" />
           </div>
         </div>
-        <div class="left">
+        <div class="left d-flex justify-content-center align-items-start">
           
           <div class="price">
             <p>
